# ioet-feature-flag

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  example.md  example2.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: feature-flag-cd-prod.yaml  feature-flag-cd-stage.yaml  feature-flag-cd.yaml  feature-flag-ci.yaml  feature-flag-general.yaml  validate-PR-name.yaml
docs/architecture/: c4_component_diagram.wsd  c4_system_context_diagram.wsd
ioet_feature_flag/: __init__.py  _exceptions.py  exceptions.py  factories.py  feature_router.py  router.py  toggle_context.py  toggle_point.py  toggles.py  types.py
ioet_feature_flag/adapters/: aws_appconfig_adapter.py  json_adapter.py
ioet_feature_flag/factories/: adapters.py  toggle_configuration.py
ioet_feature_flag/helpers/: aws_appconfig_helper.py  validators.py
ioet_feature_flag/helpers/aws_appconfig_helper/: CONTRIBUTORS  __init__.py  aws_appconfig_helper.py
ioet_feature_flag/providers/: __init__.py  aws_appconfig_toggle_provider.py  file_provider.py  json_toggle_provider.py  provider.py  yaml_toggle_provider.py
ioet_feature_flag/strategies/: __init__.py  cutover.py  factory.py  percentage.py  pilot_users.py  role_based.py  static.py  strategy.py  utils.py
ioet_feature_flag/toggle_configuration/: __init__.py  aws_appconfig_adapter.py  base.py  json_adapter.py
ioet_featureflag/: __init__.py  main.py
ioet_featureflag/providers/: __init__.py  aws_appconfig.py  base_provider.py  mock_appconfig.py
ioet_featureflags/: main.py
ioet_featureflags/provider/: __init__.py  aws_appconfig.py  mock_appconfig.py  provider.py
ioet_json_feature_flag/: feature_router.py
ioet_json_feature_flag/adapters/: aws_appconfig_adapter.py  base.py  json_adapter.py
release_version_tools/: generate_release_msg.py  markdown_to_text.py  setup.py
scripts/test_import/: dummy-flags.json  dummy-flags.yaml  dummy_module.py  dummy_test.py  test-branch-import.sh  test-import.sh  test-tag-import.sh
tests/: conftest.py  router_unit_test.py  test_feature_flags.py  toggle_context_unit_test.py  toggles_unit_test.py
tests/helpers/: validators_unit_test.py
tests/providers/: aws_appconfig_toggle_provider_unit_test.py  json_toggle_provider_unit_test.py  yaml_toggle_provider_unit_test.py
tests/strategies/: cutover_unit_test.py  factory_unit_test.py  percentage_unit_test.py  pilot_users_unit_test.py  role_based_unit_test.py  static_unit_test.py  utils_unit_test.py
tests/unit/: test_feature_router.py  test_toggle_point.py
usage_examples/: frontend_usage.md  functional_usage.md  object_oriented_usage.md
(+15 files in other folders)
