[project]
name = "ioet-feature-flag"
authors = [{name = "ioet", email = "info@ioet.com"}]
description = "Feature Flag library for ioet internal apps"
readme = "README.md"
urls = {Homepage = "https://github.com/ioet/ioet-feature-flag"}
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]

[tool.poetry]
name = "ioet-feature-flag"
version = "1.7.4"
description = "Feature Flag library for ioet internal apps"
authors = ["ioet <info@ioet.com>"]
readme = "README.md"
packages = [{include = "ioet_feature_flag"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
sample-helper-aws-appconfig = "^2.0.3"
boto3 = "^1.24.59"
botocore = "^1.27.57"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
flake8 = "^6.0.0"
black = "^23.3.0"
boto3-stubs = "^1.20.8"
freezegun = "^1.1.0"
faker = "^19.6.1"

[tool.semantic_release]
tag_format = "v{version}-stg"
build_command="python release_version_tools/setup.py sdist bdist_wheel"
branch = "main"
version_variable = "release_version_tools/setup.py:__version__"
upload_to_repository = false

[tool.black]
line_length = 100
